Added custom styling and bootstrap theme. Added Category model and included migration.

--- a/BulkyBook/BulkyBook/appsettings.json
+++ b/BulkyBook/BulkyBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BulkyBook-7524CFEE-A00A-42F2-AC90-903F1DFBFCD9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
